tests/expectations/parser-expression/expression/token_format.out
Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `'h'`.



Error [EPAR0370009]: unexpected string: expected 'expression', found '@'
    --> test_7:1:1
     |
   1 | @test
     | ^


Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370009]: unexpected string: expected 'expression', found '&&'
    --> test_9:1:1
     |
   1 | &&
     | ^^


Error [EPAR0370009]: unexpected string: expected 'expression', found '||'
    --> test_10:1:1
     |
   1 | ||
     | ^^


Error [EPAR0370009]: unexpected string: expected 'expression', found '=='
    --> test_11:1:1
     |
   1 | ==
     | ^^


Error [EPAR0370009]: unexpected string: expected 'expression', found '!='
    --> test_12:1:1
     |
   1 | !=
     | ^^


Error [EPAR0370009]: unexpected string: expected 'expression', found '<'
    --> test_13:1:1
     |
   1 | <
     | ^


Error [EPAR0370009]: unexpected string: expected 'expression', found '<='
    --> test_14:1:1
     |
   1 | <=
     | ^^


Error [EPAR0370009]: unexpected string: expected 'expression', found '>'
    --> test_15:1:1
     |
   1 | >
     | ^


Error [EPAR0370009]: unexpected string: expected 'expression', found '>='
    --> test_16:1:1
     |
   1 | >=
     | ^^


Error [EPAR0370009]: unexpected string: expected 'expression', found '+'
    --> test_17:1:1
     |
   1 | +
     | ^


Error [EPAR0370009]: unexpected string: expected 'expression', found '<eof>'
    --> test_18:1:1
     |
   1 | -
     | ^


Error [EPAR0370009]: unexpected string: expected 'expression', found '*'
    --> test_19:1:1
     |
   1 | *
     | ^


Error [EPAR0370009]: unexpected string: expected 'expression', found '**'
    --> test_20:1:1
     |
   1 | **
     | ^^


Error [EPAR0370009]: unexpected string: expected 'expression', found '/'
    --> test_21:1:1
     |
   1 | /
     | ^


Error [EPAR0370009]: unexpected string: expected 'expression', found '='
    --> test_22:1:1
     |
   1 | =
     | ^


Error [EPAR0370009]: unexpected string: expected 'expression', found '+='
    --> test_23:1:1
     |
   1 | +=
     | ^^


Error [EPAR0370009]: unexpected string: expected 'expression', found '-='
    --> test_24:1:1
     |
   1 | -=
     | ^^


Error [EPAR0370009]: unexpected string: expected 'expression', found '*='
    --> test_25:1:1
     |
   1 | *=
     | ^^


Error [EPAR0370009]: unexpected string: expected 'expression', found '/='
    --> test_26:1:1
     |
   1 | /=
     | ^^


Error [EPAR0370009]: unexpected string: expected 'expression', found '**='
    --> test_27:1:1
     |
   1 | **=
     | ^^^


Error [EPAR0370009]: unexpected string: expected 'expression', found '<eof>'
    --> test_28:1:1
     |
   1 | (
     | ^


Error [EPAR0370009]: unexpected string: expected 'expression', found ')'
    --> test_29:1:1
     |
   1 | )
     | ^


Error [EPAR0370009]: unexpected string: expected 'expression', found '<eof>'
    --> test_30:1:1
     |
   1 | [
     | ^


Error [EPAR0370009]: unexpected string: expected 'expression', found ']'
    --> test_31:1:1
     |
   1 | ]
     | ^


Error [EPAR0370009]: unexpected string: expected 'expression', found '{'
    --> test_32:1:1
     |
   1 | {
     | ^


Error [EPAR0370009]: unexpected string: expected 'expression', found '}'
    --> test_33:1:1
     |
   1 | }
     | ^


Error [EPAR0370009]: unexpected string: expected 'expression', found ','
    --> test_34:1:1
     |
   1 | ,
     | ^


Error [EPAR0370009]: unexpected string: expected 'expression', found '.'
    --> test_35:1:1
     |
   1 | .
     | ^


Error [EPAR0370009]: unexpected string: expected 'expression', found '..'
    --> test_36:1:1
     |
   1 | ..
     | ^^


Error [EPAR0370009]: unexpected string: expected 'expression', found '..'
    --> test_37:1:1
     |
   1 | ...
     | ^^


Error [EPAR0370009]: unexpected string: expected 'expression', found ';'
    --> test_38:1:1
     |
   1 | ;
     | ^


Error [EPAR0370009]: unexpected string: expected 'expression', found ':'
    --> test_39:1:1
     |
   1 | :
     | ^


Error [EPAR0370009]: unexpected string: expected 'identifier', found '<eof>'
    --> test_40:1:2
     |
   1 | h::
     |  ^^


Error [EPAR0370009]: unexpected string: expected 'expression', found '?'
    --> test_41:1:1
     |
   1 | ?
     | ^


Error [EPAR0370009]: unexpected string: expected 'expression', found '->'
    --> test_42:1:1
     |
   1 | ->
     | ^^


Error [EPAR0370009]: unexpected string: expected 'expression', found '_'
    --> test_43:1:1
     |
   1 | _
     | ^


Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370016]: Could not lex the following content: `~`.



Error [EPAR0370009]: unexpected string: expected 'expression', found 'console'
    --> test_60:1:1
     |
   1 | console
     | ^^^^^^^


Error [EPAR0370009]: unexpected string: expected 'expression', found 'constant'
    --> test_61:1:1
     |
   1 | constant
     | ^^^^^^^^


Error [EPAR0370009]: unexpected string: expected 'expression', found 'else'
    --> test_62:1:1
     |
   1 | else
     | ^^^^


Error [EPAR0370009]: unexpected string: expected 'expression', found 'for'
    --> test_63:1:1
     |
   1 | for
     | ^^^


Error [EPAR0370009]: unexpected string: expected 'expression', found 'function'
    --> test_64:1:1
     |
   1 | function
     | ^^^^^^^^


Error [EPAR0370009]: unexpected string: expected 'expression', found 'if'
    --> test_65:1:1
     |
   1 | if
     | ^^


Error [EPAR0370009]: unexpected string: expected 'expression', found 'in'
    --> test_66:1:1
     |
   1 | in
     | ^^


Error [EPAR0370009]: unexpected string: expected 'expression', found 'let'
    --> test_67:1:1
     |
   1 | let
     | ^^^


Error [EPAR0370009]: unexpected string: expected 'expression', found '&'
    --> test_68:1:1
     |
   1 | &
     | ^


Error [EPAR0370009]: unexpected string: expected 'expression', found 'return'
    --> test_69:1:1
     |
   1 | return
     | ^^^^^^


